--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 frontend/node_modules
+backend/node_modules
 /.pnp
 .pnp.js
 
@@ -17,6 +18,7 @@ frontend/node_modules
 .env.development.local
 .env.test.local
 .env.production.local
+backend/.env
 
 npm-debug.log*
 yarn-debug.log*
