--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "firebase": "^9.6.11",
     "moment": "^2.29.1",
+    "otp-input-react": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
+    "react-otp-input": "^2.4.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
